not to use deprecated constructor